--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             height: 500px;
         }
 
-        .box {
+        .kotak {
             width: 20px;
             margin: 0 1px;
         }
