--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
     <h1>Simulasi Algoritma Pengurutan</h1>
     <div class="container">
-        <div class="box" style="height: 100px; background-color: red;"></div>
-        <div class="box" style="height: 200px; background-color: blue;"></div>
-        <div class="box" style="height: 150px; background-color: yellow;"></div>
-        <div class="box" style="height: 120px; background-color: green;"></div>
+        <div class="kotak" style="height: 100px; background-color: red;"></div>
+        <div class="kotak" style="height: 200px; background-color: blue;"></div>
+        <div class="kotak" style="height: 150px; background-color: yellow;"></div>
+        <div class="kotak" style="height: 120px; background-color: green;"></div>
         <div class="box" style="height: 250px; background-color: orange;"></div>
     </div>
 
