--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="kotak" style="height: 200px; background-color: blue;"></div>
         <div class="kotak" style="height: 150px; background-color: yellow;"></div>
         <div class="kotak" style="height: 120px; background-color: green;"></div>
-        <div class="box" style="height: 250px; background-color: orange;"></div>
+        <div class="kotak" style="height: 250px; background-color: orange;"></div>
     </div>
 
     <button onclick="mulaiPengurutan('bubbleSort')">Bubble Sort</button>
