--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             return new Promise(resolve => setTimeout(resolve, ms));
         }
 
-        async function pengurutanGelembung() {
+        async function bubbleSort() {
             let kotakKotak = document.querySelectorAll('.box');
             let ditukar;
             let n = kotakKotak.length;
