--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             } while (ditukar);
         }
 
-        async function pengurutanSeleksi() {
+        async function selectionSort() {
             let kotakKotak = document.querySelectorAll('.box');
             let n = kotakKotak.length;
             for (let i = 0; i < n - 1; i++) {
