--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             }
         }
 
-        async function pengurutanPenyisipan() {
+        async function insertionSort() {
             let kotakKotak = document.querySelectorAll('.box');
             let n = kotakKotak.length;
             for (let i = 1; i < n; i++) {
