--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         }
 
         async function insertionSort() {
-            let kotakKotak = document.querySelectorAll('.box');
+            let kotakKotak = document.querySelectorAll('.kotak');
             let n = kotakKotak.length;
             for (let i = 1; i < n; i++) {
                 let saatIni = kotakKotak[i].style.height;
