--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
 
         async function selectionSort() {
-            let kotakKotak = document.querySelectorAll('.box');
+            let kotakKotak = document.querySelectorAll('.kotak');
             let n = kotakKotak.length;
             for (let i = 0; i < n - 1; i++) {
                 let indeksMin = i;
