--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         async function bubbleSort() {
-            let kotakKotak = document.querySelectorAll('.box');
+            let kotakKotak = document.querySelectorAll('.kotak');
             let ditukar;
             let n = kotakKotak.length;
             do {
