--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         function mulaiPengurutan(algoritma) {
             switch (algoritma) {
                 case 'bubbleSort':
-                    pengurutanGelembung();
+                    bubbleSort();
                     break;
                 case 'selectionSort':
                     pengurutanSeleksi();
