--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     bubbleSort();
                     break;
                 case 'selectionSort':
-                    pengurutanSeleksi();
+                    selectionSort();
                     break;
                 case 'insertionSort':
                     pengurutanPenyisipan();
