--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     selectionSort();
                     break;
                 case 'insertionSort':
-                    pengurutanPenyisipan();
+                    insertionSort();
                     break;
                 default:
                     console.log('Algoritma pengurutan tidak valid');
