--- a/index.html
+++ b/index.html
@@ -37,31 +37,6 @@
     <button onclick="mulaiPengurutan('insertionSort')">Insertion Sort</button>
     <button onclick="location.reload()">Pilih Algoritma Lagi</button>
 
-    <script>
-        function jedaWaktu(ms) {
-            return new Promise(resolve => setTimeout(resolve, ms));
-        }
-
-        async function bubbleSort() {
-            let kotakKotak = document.querySelectorAll('.kotak');
-            let ditukar;
-            let n = kotakKotak.length;
-            do {
-                ditukar = false;
-                for (let i = 0; i < n - 1; i++) {
-                    let tinggi1 = parseInt(kotakKotak[i].style.height);
-                    let tinggi2 = parseInt(kotakKotak[i + 1].style.height);
-                    if (tinggi1 > tinggi2) {
-                        kotakKotak[i].style.height = tinggi2 + 'px';
-                        kotakKotak[i + 1].style.height = tinggi1 + 'px';
-                        ditukar = true;
-                        await jedaWaktu(500); // Jeda untuk animasi (lebih lambat)
-                    }
-                }
-                n--;
-            } while (ditukar);
-        }
-
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
