--- a/index.html
+++ b/index.html
@@ -2,25 +2,7 @@
 <html>
 <head>
     <title>Simulasi Algoritma Pengurutan</title>
-    <style>
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            height: 500px;
-        }
-
-        .kotak {
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            width: 40px;
-            margin: 0 1px;
-            border: 1px solid black;
-            font-size: 12px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Simulasi Algoritma Pengurutan</h1>
