--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Simulasi Algoritma Pengurutan</h1>
+    <a href="andhikaprttp.github.io">andhika prttp</a>
     <div class="container">
         <div class="kotak" style="height: 100px; background-color: red;">1</div>
         <div class="kotak" style="height: 200px; background-color: blue;">2</div>
