--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Simulasi Algoritma Pengurutan</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Simulasi Algoritma Pengurutan</h1>
     <a href="andhikaprttp.github.io">andhika prttp</a>
     <div class="container">
-        <div class="kotak" style="height: 100px; background-color: red;">1</div>
-        <div class="kotak" style="height: 200px; background-color: blue;">2</div>
-        <div class="kotak" style="height: 150px; background-color: yellow;">3</div>
-        <div class="kotak" style="height: 120px; background-color: green;">4</div>
-        <div class="kotak" style="height: 250px; background-color: orange;">5</div>
+      <div class="kotak" style="height: 100px; background-color: red">1</div>
+      <div class="kotak" style="height: 200px; background-color: blue">2</div>
+      <div class="kotak" style="height: 150px; background-color: yellow">3</div>
+      <div class="kotak" style="height: 120px; background-color: green">4</div>
+      <div class="kotak" style="height: 250px; background-color: orange">5</div>
     </div>
 
     <button onclick="mulaiPengurutan('bubbleSort')">Bubble Sort</button>
@@ -21,5 +21,5 @@
     <button onclick="location.reload()">Pilih Algoritma Lagi</button>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
