--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <body>
     <h1>Simulasi Algoritma Pengurutan</h1>
     <a href="andhikaprttp.github.io">andhika prttp</a>
+    <hr>
+    <h3>Teknik Informatika | Berpikir Komputasional</h3>
     <div class="container">
       <div class="kotak" style="height: 100px; background-color: red">1</div>
       <div class="kotak" style="height: 200px; background-color: blue">2</div>
